<resources>
    <string name="app_name">Army Fitness Test Recorder</string>
    <string name="title_acft">ACFT</string>
    <string name="title_long_acft">Combat Fitness Test</string>
    <string name="title_apft">APFT</string>
    <string name="title_long_apft">Physical Fitness Test</string>
    <string name="title_abcp">ABCP</string>
    <string name="title_long_abcp">Body Composition</string>
    <string name="title_log">Log</string>
    <string name="info">Information</string>
    <string name="license">License</string>
    <string name="infobody1">This Application ( </string>
    <string name="infobody2"> ) has been designed based on US Army Regulation and Field Manual (AR 600–9, FM 7–22) to help soldiers.</string>
    <string name="infobody3">However, this application has never been officially authorized. The result of this application cannot be valid without the record in official form. Use for reference only.</string>
    <string name="infobody4">This application is under Apache License 2.0 (http://www.apache.org/licenses/LICENSE-2.0.txt). The source has been published on GitHub (https://github.com/fennecfox38/ArmyFitnessTestRecorder)</string>
    <string name="infobody5">Review and Feedback may be accepted via the following.</string>
    <string name="ACFTScale">ACFT Score Scale</string>
    <string name="APFTScale">APFT Score Scale</string>
    <string name="ABCPScale">ABCP Score Scale</string>
    <string name="MOSChart">MOS Chart</string>
    <string name="DashBoard">DashBoard</string>
    <string name="Notification">Notification</string>
    <string name="Save">Save</string>
    <string name="MOS">MOS</string>
    <string name="satisfies"> satisfies </string>
    <string name="recordDate">Record Date</string>
    <string name="pass">Pass</string>
    <string name="fail">Fail</string>
    <string name="na">N/A</string>
    <string name="Moderate">Moderate</string>
    <string name="Significant">Significant</string>
    <string name="Heavy">Heavy</string>
    <string name="Score">Score</string>
    <string name="Points">points</string>
    <string name="MDL">Maximum Dead Lift</string>
    <string name="SPT">Standing Power Throw</string>
    <string name="HPU">Hand-Release Push-Up</string>
    <string name="SDC">Sprint-Drag-Carry</string>
    <string name="LTK">Leg Tucks</string>
    <string name="Cardio">Cardio</string>
    <string name="Run">2 Mile Run</string>
    <string name="Row_ACFT">5000 M Row</string>
    <string name="Bike_ACFT">15000 M Bike</string>
    <string name="Swim_ACFT">1000 M Swim</string>
    <string name="Walk_APFT">2.5 Mile Walk</string>
    <string name="Bike_APFT">6.2 Mile Bike</string>
    <string name="Swim_APFT">800 Yard Swim</string>
    <string name="MDL_short">MDL</string>
    <string name="SPT_short">SPT</string>
    <string name="HPU_short">HPU</string>
    <string name="SDC_short">SDC</string>
    <string name="LTK_short">LTK</string>
    <string name="PU">Push-Up</string>
    <string name="SU">Sit-Up</string>
    <string name="lbs">lbs</string>
    <string name="m">m</string>
    <string name="reps">reps</string>
    <string name="title_duration_picker">Set Duration Time</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="Dismiss">Dismiss</string>
    <string name="min">min</string>
    <string name="sec">sec</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="agegroup">Age Group</string>
    <string name="h_w">Height/Weight</string>
    <string name="bodyfat">Body Fat</string>
    <string name="inches">inches</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="neck">Neck</string>
    <string name="abdomen">Abdomen</string>
    <string name="waist">Waist</string>
    <string name="hips">Hips</string>
    <string name="record">Record</string>
    <string name="Import">Import</string>
    <string name="Export">Export</string>
    <string name="delete">Delete</string>
    <string name="saveDB">Save SQL DB File</string>
    <string name="shareDB">Share SQL DB File</string>
    <string name="shareXLS">Share Excel XLS File</string>
    <string name="recordSaved">Record saved on log successfully.</string>
    <string name="recordDeleted">Record deleted successfully.</string>
    <string name="undo">Undo</string>
</resources>