<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".log.LogFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabGravity="fill"
        app:tabMode="fixed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/viewPager_log"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_acft_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_acft"/>
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_apft_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_apft"/>
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_abcp_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_abcp"/>
    </com.google.android.material.tabs.TabLayout>
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager_log"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout_log"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>