<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:padding="5dp"
    android:elevation="5dp"
    android:background="@color/cardview_dark_background">
    <TextView
        android:id="@+id/txt_title_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="20dp"
        android:textSize="24sp"
        android:text="@string/SDC"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/layout_duration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
        android:id="@+id/layout_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_event"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editText_sco_event">
        <EditText
            android:id="@+id/editText_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/min"/>
        <EditText
            android:id="@+id/editText_sec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/sec"/>
    </LinearLayout>

    <EditText
        android:id="@+id/editText_sco_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        app:layout_constraintTop_toTopOf="@+id/layout_duration"
        app:layout_constraintBottom_toBottomOf="@+id/layout_duration"
        app:layout_constraintStart_toEndOf="@+id/layout_duration"
        app:layout_constraintEnd_toStartOf="@+id/txt_sco_event"/>

    <TextView
        android:id="@+id/txt_sco_event"
        android:layout_width="42dp"
        android:layout_height="24dp"
        android:text="@string/Points"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_sco_event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText_sco_event" />
</androidx.constraintlayout.widget.ConstraintLayout>