<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <import type="army.prt.recorder.acft.event.Event" />
        <variable
            name="viewholder"
            type="army.prt.recorder.acft.event.EventRecyclerAdapter.DurationViewHolder" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:elevation="5dp"
        android:background="@color/cardview_background">
        <TextView
            android:id="@+id/txt_title_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:textSize="24sp"
            android:text="@{viewholder.event.title}"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/layout_duration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/spinner_cardio_alter"/>
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_cardio_alter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{(viewholder.event.eventType == Event.CARDIO) ? View.VISIBLE : View.GONE}"
            android:spinnerMode="dropdown"
            android:entries="@array/CardioEvent"
            android:selectedItemPosition="@={viewholder.event.cardioAlter}"
            android:onItemSelected="@{viewholder::onItemSelected}"
            app:layout_constraintBaseline_toBaselineOf="@+id/txt_title_event"
            app:layout_constraintStart_toEndOf="@+id/txt_title_event"
            app:layout_constraintEnd_toEndOf="parent"/>
        <LinearLayout
            android:id="@+id/layout_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_event"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/editText_sco_event">
            <EditText
                android:id="@+id/editText_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="number"
                android:onClick="@{viewholder::onTimeClick}"
                android:text="@{String.valueOf(viewholder.event.duration.getMin())}"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="@string/min"/>
            <EditText
                android:id="@+id/editText_sec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="number"
                android:onClick="@{viewholder::onTimeClick}"
                android:text="@{String.valueOf(viewholder.event.duration.getSec())}"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="@string/sec"/>
        </LinearLayout>

        <EditText
            android:id="@+id/editText_sco_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:text="@{String.valueOf(viewholder.event.sco)}"
            app:layout_constraintTop_toTopOf="@+id/layout_duration"
            app:layout_constraintBottom_toBottomOf="@+id/layout_duration"
            app:layout_constraintStart_toEndOf="@+id/layout_duration"
            app:layout_constraintEnd_toStartOf="@+id/txt_sco_event"/>

        <TextView
            android:id="@+id/txt_sco_event"
            android:layout_width="42dp"
            android:layout_height="24dp"
            android:layout_marginEnd="20dp"
            android:text="@string/Points"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText_sco_event"
            app:layout_constraintStart_toEndOf="@+id/editText_sco_event"
            app:layout_constraintEnd_toStartOf="@+id/txt_level_event"/>

        <TextView
            android:id="@+id/txt_level_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:ems="4"
            android:textSize="20sp"
            android:text="@{viewholder.setQualifiedLevel(viewholder.event.sco)}"
            app:layout_constraintBaseline_toBaselineOf="@+id/txt_sco_event"
            app:layout_constraintStart_toEndOf="@+id/txt_sco_event"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

